# geo-app-sample

./: Dockerfile  app.py  pyproject.toml
templates/: index.html
